--- a/cooking-app-client/src/App.css
+++ b/cooking-app-client/src/App.css
@@ -97,15 +97,26 @@ body {
     margin-top: 140px;
 }
 
+.RecipeThumb-List-Container {
+    clear: both;
+    float: left;
+    width: 100%;
+    margin: 0 0 0 0;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
 .RecipeThumb-List {
     clear: both;
     float: left;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
     max-width: 800px;
-    align-self: center;
     margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    vertical-align: middle;
+    grid-gap: 30px;
 }
 
 .App-recipe-thumb {
@@ -114,15 +125,20 @@ body {
     display: flex;
     min-width: 200px;
     max-width: 400px;
-    width: 45%;
+    width: 100%;
     height: auto;
     flex-flow: column nowrap;
     order: 1px solid #dbdbce;
     box-shadow: 0 1px 5px rgba(0,0,0,.1);
     border-radius: 5px;
-    margin: 20px 20px 20px 20px;
     transition: opacity .1s ease-in-out;
     position: relative;
+    margin: 15px 0 0 0;
+}
+
+.RecipeThumb-Column {
+    display: flex;
+    flex-flow: column nowrap;
 }
 
 .RecipeThumb-image {
@@ -135,17 +151,63 @@ body {
 .RecipeThumb-content {
     display: flex;
     flex-flow: column;
-    margin-left: 2px;
-    margin-right: 2px;
+    margin: 5px 5px 5px 5px;
 }
 
 .RecipeThumb-title {
-    display: flex;
     font-size: 1.7em;
     color: #1ECD97;
 }
 
 .RecipeThumb-author {
+    font-size: 1.3em;
+    margin-top: 5px;
+}
+
+.RecipeThumb-List-pagination-label {
+    margin: 50px 50px 0 0;
+}
+
+.RecipeThumb-List-pagination-label span {
+    transition: box-shadow 0.2s;
+    transition: color 0.2s;
+    text-decoration: none;
+    color: #1ECD97;
+    font-size: 1.7em;
+    cursor: pointer;
+}
+
+.RecipeThumb-List-pagination-label span:hover {
+    box-shadow: inset 0 -2.5rem 0 0 #2EAFAC;
+    color: #fff;
+}
+
+.Footer-container {
+    clear: both;
+    float: left;
+    width: 100%;
+    height: 50px;
+    margin: 0 0 0 0;
     display: flex;
-    font-size: 1.2em;
+    flex-flow: row nowrap;
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+
+.Footer-label {
+    font-size: 1.2rem;
+    margin-left: 15%;
+}
+
+.Footer-label a {
+    text-decoration: none;
+}
+
+.NotFoundLabel {
+    height: 800px;
+    width: 100%;
+    font-size: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
