Implement base components for Recipe and Ingredient

--- a/cooking-app-client/src/App.css
+++ b/cooking-app-client/src/App.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Tangerine&display=swap');
 
 body {
     top: 0;
     margin: 0;
     width: 100%;
     height: 100%;
-    background-color: #fafafa;
+    background-color: #f1eee7;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .Anchor-unstyled {
@@ -50,9 +52,10 @@ body {
     display: flex;
     flex-flow: column nowrap;
     align-self: center;
-    font-size: 25px;
-    letter-spacing: 1px;
-    font-family: 'Quicksand', sans-serif;
+    font-size: 40px;
+    letter-spacing: 2px;
+    font-family: 'Tangerine', cursive;
+    color: #751A33;
 }
 
 .Auth-header-buttons {
@@ -78,10 +81,10 @@ body {
 	padding: 0;
 	width: 150px;
 	height: 50px;
-	border: 2px solid #1ECD97;
+    border: 2px solid #ffc125;
 	border-radius: 10px;
 	background: transparent;
-	color: #1ECD97;
+	color: #ffc125;
 	letter-spacing: 1px;
 	font-size: 18px;
 	-webkit-transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
@@ -89,7 +92,7 @@ body {
 }
 
 .Auth-button button:hover {
-    background-color: #1ECD97;
+    background-color: #ffc125;
 	color: #fff;
 }
 
@@ -134,6 +137,7 @@ body {
     height: auto;
     flex-flow: column nowrap;
     order: 1px solid #dbdbce;
+    background: white;
     box-shadow: 0 1px 5px rgba(0,0,0,.1);
     border-radius: 5px;
     transition: opacity .1s ease-in-out;
@@ -161,7 +165,7 @@ body {
 
 .RecipeThumb-title {
     font-size: 1.7em;
-    color: #1ECD97;
+    color: #91be5b;
 }
 
 .RecipeThumb-author {
@@ -177,13 +181,15 @@ body {
     transition: box-shadow 0.2s;
     transition: color 0.2s;
     text-decoration: none;
-    color: #1ECD97;
+    color: #ffc125;
     font-size: 1.7em;
     cursor: pointer;
 }
 
 .RecipeThumb-List-pagination-label span:hover {
-    box-shadow: inset 0 -2.5rem 0 0 #2EAFAC;
+    box-shadow: inset 0 -2.5rem 0 0 #ffc125;
+    padding: 5px;
+    border-radius: 0px 0px 10px 10px;
     color: #fff;
 }
 
@@ -195,13 +201,14 @@ body {
     margin: 0 0 0 0;
     display: flex;
     flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
     margin-top: 50px;
     margin-bottom: 100px;
 }
 
 .Footer-label {
     font-size: 1.2rem;
-    margin-left: 15%;
 }
 
 .Footer-label a {
@@ -215,4 +222,123 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.Recipe-container {
+    clear: both;
+    float: left;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1.5fr 2fr 1.5fr;
+    vertical-align: middle;
+    grid-gap: 10px;
+}
+
+.Recipe-comments {
+    font-size: 2rem;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.Recipe-body {
+    margin-top: 40px;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    background: white;
+}
+
+.Recipe-image {
+    object-fit: cover;
+    min-width: 100%;
+    width: 100%;
+}
+
+.Recipe-content {
+    display: flex;
+    flex-flow: column nowrap;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.Recipe-title {
+    font-size: 2.1em;
+    color: #B3D28D;
+    margin: 10px 10px 0px 0px;
+}
+
+.Recipe-title-thumb {
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+.Recipe-title-thumb span {
+    font-size: 0.9em;
+    color: grey;
+}
+
+.Recipe-time-to-prepare {
+    height: 20px;
+    width: 20px;
+}
+
+.Recipe-author-small {
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.Recipe-description-short p {
+    margin-right: 20px;
+}
+
+.Recipe-description p {
+    margin-right: 20px;
+    white-space: pre-wrap;
+}
+
+.Recipe-break {
+    height: 20px;
+    width: 100%;
+}
+
+.Recipe-label {
+    font-size: 1.2rem;
+}
+
+.Recipe-user-space {
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.RecipeIngredient-list {
+    padding: 0;
+    list-style-type: none;
+}
+
+.RecipeIngredient-item {
+
+}
+
+.User-image-small {
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.User-image-big {
+    vertical-align: middle;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
 }
