--- a/cooking-app-client/src/App.css
+++ b/cooking-app-client/src/App.css
@@ -133,6 +133,10 @@ body {
     grid-gap: 10px;
 }
 
+.Auth-form-submit {
+    margin-top: 10px;
+}
+
 .Auth-form-submit button {
     display: block;
     margin: 0 auto;
