--- a/src/App.css
+++ b/src/App.css
@@ -446,6 +446,10 @@ a {
     align-items: center;
 }
 
+.Recipe-author-small span {
+    margin-left: 5px;
+}
+
 .Recipe-description-short p {
     margin-right: 20px;
 }
@@ -748,5 +752,47 @@ nav ul li ul:hover {
 
 nav ul li ul li {
     clear: both;
+    width: 100%;
+}
+
+.Recipe-comments {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    font-size: 1.2em;
+}
+
+.Recipe-Comments-Container {
+    margin-top: 40px;
+    min-width: 250px;
+}
+
+.Recipe-Comment {
+    background: white;
+    margin-bottom: 10px;
+    padding: 5px;
+    box-shadow: 0 1px 5px rgba(0,0,0,.1);
+    border-radius: 5px;
+    transition: opacity .1s ease-in-out;
+}
+
+.Recipe-Comment-New {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.Recipe-Comment-New textarea {
+    resize: none;
+    align-self: center;
+}
+
+.Recipe-Comment-New-button {
+    width: 100%;
+}
+
+.Recipe-Comment-New button {
     width: 100%;
 }
